# Codelogue

./: .gitignore  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  main.py  manage.py  pyproject.toml
backend/migrations/versions/: 9c170cfdd51f_updated_migration_with_tag_and_snippet_.py  b0dc99658143_updated_migration_with_language_snippet_.py  ecdc4741d0cd_initial_migration.py
backend/seeds/: __init__.py  seeder.py
backend/seeds/data/: programming_languages.txt
backend/src/app/: __init__.py  functions.py  inputs.py  models.py  mutations.py  objects.py  outputs.py  queries.py  schema.py  setup.py
backend/src/routes/: api.py
backend/tests/: __init__.py  api_calls.py  test_backend.py
frontend/: .gitignore  .graphqlconfig  Dockerfile  package-lock.json  package.json  vue.config.js
frontend/path/to/: schema.graphql
frontend/src/: App.vue  main.js
frontend/src/components/: Counter.vue  Landing.vue  Navbar.vue  SignIn.vue  SignInForm.vue  SignUp.vue  SignUpForm.vue  UserPanel.vue
frontend/src/components/fragments/: ConfirmDeletionDialog.vue  EditSnippet.vue  FeedbackTextInput.vue  FolderPane.vue  FolderPreview.vue  PreviewPane.vue  SignInEmailInput.vue  SignInPasswordInput.vue  SnippetEditor.vue  SnippetForm.vue  SnippetPane.vue  SnippetPreview.vue
frontend/src/graphql/: index.js
frontend/src/router/: endpoints.js  index.js
frontend/src/store/: index.js
frontend/src/views/: About.vue  CreateSnippet.vue  Dashboard.vue  FolderPreview.vue  Home.vue  Index.vue  SignIn.vue  SnippetPreview.vue
(+20 files in other folders)
