[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["adempus <jmorin722@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.1.0"
Flask = "^1.1.2"
flask-cors = "^3.0.8"
python-dotenv = "^0.13.0"
flask-migrate = "^2.5.3"
psycopg2 = "^2.8.5"
flask-jwt-extended = "^3.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
